fixed signup spacing

--- a/client/src/Components/LandingPage/LogInBay.less
+++ b/client/src/Components/LandingPage/LogInBay.less
@@ -100,14 +100,17 @@
   input[type="text"] {
     border: none;
     border-bottom: 1px solid grey;
+    height: 10px;
   }
   input[type="email"] {
     border: none;
     border-bottom: 1px solid grey;
+    height: 10px;
   }
   input[type="password"] {
     border: none;
     border-bottom: 1px solid grey;
+    height: 10px;
   }
   input[type="submit"] {
     border: none;
